--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -10,6 +10,26 @@ h1, h2, h3, h4, h5, h6 {
   font-family: AudiType-Bold;
 }
 
+h1 {
+  font-size: 66px;
+}
+
+h2 {
+  font-size: 50px;
+}
+
+h3 {
+  font-size: 30px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
+h5 {
+  font-size: 16px;
+}
+
 p {
   font-family: AudiType-Normal;
   font-size: 16px;
