define font sizes

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -10,8 +10,30 @@ h1, h2, h3, h4, h5, h6 {
   font-family: AudiType-Bold;
 }
 
+h1 {
+  font-size: 4.1rem;
+  line-height: 1.1;
+}
+
+h2 {
+  font-size: 3.1rem;
+}
+
+h3 {
+  font-size: 1.88rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
+
+h5 {
+  font-size: 0.94rem;
+}
+
 p {
   font-family: AudiType-Normal;
-  font-size: 16px;
+  font-size: 0.94rem;
   line-height: 1.25;
 }
